syntax = "proto3";

package com.pal2hmnk.example.generated.grpc.services;

option java_multiple_files = true;

message UserName {
  string value = 1;
}

message UserInfo {
  int32 id = 1;
  string name = 2;
}

message UserAuthInfo {
  string email = 1;
  string password = 2;
}
